Sample Mono 코드 추가

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-webflux')
     implementation('org.springframework.boot:spring-boot-starter-actuator')
+    implementation('org.springframework.restdocs:spring-restdocs-mockmvc')
 
     compileOnly('org.projectlombok:lombok')
     annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
@@ -32,6 +33,7 @@ dependencies {
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('io.projectreactor:reactor-test')
+    testImplementation('org.projectlombok:lombok')
 }
 
 test {
