--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,10 @@ repositories {
 }
 
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-webflux')
     implementation('org.springframework.boot:spring-boot-starter-actuator')
     implementation('org.springframework.restdocs:spring-restdocs-mockmvc')
+    implementation('org.springframework.boot:spring-boot-starter-test')
 
     compileOnly('org.projectlombok:lombok')
     annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
@@ -31,7 +31,6 @@ dependencies {
 
     providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('io.projectreactor:reactor-test')
     testImplementation('org.projectlombok:lombok')
 }
