--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,19 @@
+buildscript {
+    ext {
+    }
+}
+
 plugins {
     id 'org.springframework.boot' version '2.4.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.asciidoctor.convert' version '1.5.9.2'
     id 'java'
     id 'war'
 }
 
 group = 'sunghs'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = JavaVersion.VERSION_11
 
 configurations {
     compileOnly {
@@ -19,18 +25,29 @@ repositories {
     mavenCentral()
 }
 
+asciidoctor {
+    dependsOn test
+}
+
+bootJar {
+    dependsOn asciidoctor
+    from("${asciidoctor.outputDir}/html5") {
+        into 'static/docs'
+    }
+}
+
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-webflux')
     implementation('org.springframework.boot:spring-boot-starter-actuator')
+    asciidoctor('org.springframework.restdocs:spring-restdocs-asciidoctor')
     implementation('org.springframework.restdocs:spring-restdocs-mockmvc')
-    implementation('org.springframework.boot:spring-boot-starter-test')
+    implementation('org.springframework.boot:spring-boot-starter-validation')
 
     compileOnly('org.projectlombok:lombok')
     annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
     annotationProcessor('org.projectlombok:lombok')
 
-    providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
-
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('io.projectreactor:reactor-test')
     testImplementation('org.projectlombok:lombok')
 }
