--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,7 @@ buildscript {
 plugins {
     id 'org.springframework.boot' version '2.4.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'org.asciidoctor.convert' version '1.5.9.2'
     id 'java'
-    id 'war'
 }
 
 group = 'sunghs'
@@ -25,23 +23,15 @@ repositories {
     mavenCentral()
 }
 
-asciidoctor {
-    dependsOn test
-}
-
 bootJar {
-    dependsOn asciidoctor
-    from("${asciidoctor.outputDir}/html5") {
-        into 'static/docs'
-    }
 }
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-webflux')
-    implementation('org.springframework.boot:spring-boot-starter-actuator')
-    asciidoctor('org.springframework.restdocs:spring-restdocs-asciidoctor')
-    implementation('org.springframework.restdocs:spring-restdocs-mockmvc')
     implementation('org.springframework.boot:spring-boot-starter-validation')
+
+    implementation('org.springframework.boot:spring-boot-starter-jdbc')
+    implementation('com.h2database:h2')
 
     compileOnly('org.projectlombok:lombok')
     annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
