--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,15 @@
+server:
+  port: 8080
 spring:
   main:
     web-application-type: reactive
+  profiles:
+    active: local
+  h2:
+    console:
+      enabled: true
+  datasource:
+    url: jdbc:h2:mem:webflux-example
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
