--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-validation')
 
     implementation('org.springframework.boot:spring-boot-starter-jdbc')
-    implementation('com.h2database:h2')
+    implementation('com.h2database:h2:1.4.197') // 1.4.198 부터는 로컬에 DB를 직접 생성해야 함
 
     compileOnly('org.projectlombok:lombok')
     annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
