--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,4 +12,4 @@ spring:
     url: jdbc:h2:mem:webflux-example
     driver-class-name: org.h2.Driver
     username: sa
-    password:
+    password: password
