--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:mem:webflux-example
+    url: jdbc:h2:mem:webflux-example;MODE=MYSQL
     driver-class-name: org.h2.Driver
     username: sa
     password: password
